Ajout text+suggestion sur le html

--- a/test_mdl/indexAvexPanier.html
+++ b/test_mdl/indexAvexPanier.html
@@ -262,9 +262,12 @@
 								
 								
 							  </div>
+								  <div class="mdl-card__supporting-text">
+								    Le plat n'est pas équilibré.
+								  </div>
 							  <div class="mdl-card__actions mdl-card--border">
 								<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect btnabdel">
-								  Masquer
+								  Suggestion
 								</a>
 							  </div>
 							</div>
